Added register\login modals
1.  Createed global "Modal" and "Button" components which are used as a template for modal windows and other components in the application.
2. Created RegisterModal and LoginModal components (with the help of "formik" and "yup" libraries the minimal validation of controlled forms of modal windows is realized).

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
