--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "formik": "^2.4.5",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0"
   },
