--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.52.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0"
