--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "react-tooltip": "^5.27.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0"
