--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@reduxjs/toolkit": "^2.2.3",
     "body-scroll-lock": "^4.0.0-beta.0",
     "firebase": "^10.10.0",
+    "framer-motion": "^11.2.12",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
     "react-redux": "^9.1.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "react-tooltip": "^5.27.0",
